Show average humor history graphic each day by week

--- a/src/main/webapp/i18n/en/d3-chart.json
+++ b/src/main/webapp/i18n/en/d3-chart.json
@@ -34,6 +34,7 @@
     "end": "End",
     "breastFeedTodayChartTitle": "Breast/Formula feeding, today",
     "averageNapHumor": "Average humor after nap",
+    "averageHumorHistory": "Average humor history",
     "angry": "angry",
     "sad": "sad",
     "calm": "calm",
