--- a/src/main/webapp/i18n/pt-br/d3-chart.json
+++ b/src/main/webapp/i18n/pt-br/d3-chart.json
@@ -34,6 +34,7 @@
     "end": "Fim",
     "breastFeedTodayChartTitle": "Amamentação/Fórmula, hoje",
     "averageNapHumor": "Média do Humor ao Acordar",
+    "averageHumorHistory": "Média do Histórico de Humor",
     "angry": "raiva",
     "sad": "triste",
     "calm": "calmo",
