Show last weights by days

--- a/src/main/webapp/i18n/en/d3-chart.json
+++ b/src/main/webapp/i18n/en/d3-chart.json
@@ -35,6 +35,9 @@
     "breastFeedTodayChartTitle": "Breast/Formula feeding, today",
     "averageNapHumor": "Average humor after nap",
     "averageHumorHistory": "Average humor history",
+    "weight": "Weight (kg)",
+    "dates": "Dates",
+    "last30Days": "Last 30 days",
     "angry": "angry",
     "sad": "sad",
     "calm": "calm",
