--- a/src/main/webapp/i18n/pt-br/d3-chart.json
+++ b/src/main/webapp/i18n/pt-br/d3-chart.json
@@ -35,6 +35,9 @@
     "breastFeedTodayChartTitle": "Amamentação/Fórmula, hoje",
     "averageNapHumor": "Média do Humor ao Acordar",
     "averageHumorHistory": "Média do Histórico de Humor",
+    "weight": "Peso (kg)",
+    "dates": "Datas",
+    "last30Days": "Últimos 30 dias",
     "angry": "raiva",
     "sad": "triste",
     "calm": "calmo",
