Show last heights by days graphic

--- a/src/main/webapp/i18n/en/d3-chart.json
+++ b/src/main/webapp/i18n/en/d3-chart.json
@@ -36,6 +36,7 @@
     "averageNapHumor": "Average humor after nap",
     "averageHumorHistory": "Average humor history",
     "weight": "Weight (kg)",
+    "height": "Height (cm)",
     "dates": "Dates",
     "last30Days": "Last 30 days",
     "angry": "angry",
