--- a/src/main/webapp/i18n/pt-br/d3-chart.json
+++ b/src/main/webapp/i18n/pt-br/d3-chart.json
@@ -36,6 +36,7 @@
     "averageNapHumor": "Média do Humor ao Acordar",
     "averageHumorHistory": "Média do Histórico de Humor",
     "weight": "Peso (kg)",
+    "height": "Altura (cm)",
     "dates": "Datas",
     "last30Days": "Últimos 30 dias",
     "angry": "raiva",
