--- a/src/main/webapp/i18n/pt-br/global.json
+++ b/src/main/webapp/i18n/pt-br/global.json
@@ -145,5 +145,5 @@
       "not.image": "File was expected to be an image but was found to be \"{{ fileType }}\""
     }
   },
-  "footer": "Desenvolvido por <a href='https://www.linkedin.com/in/renan-af/' target='_blank'>Renan Franca</a> | <a href='https://renan-af.medium.com/web-app-angular-spring-boot-and-kubernetes-90cabcaf8417' target='_blank'>Porque criei este aplicativo?</a>"
+  "footer": "Desenvolvido por <a href='https://renanfranca.github.io/about.html' target='_blank'>Renan Franca</a> | <a href='https://renanfranca.github.io/redirect/mamazinha-baby-care-app.html' target='_blank'>Porque criei este aplicativo?</a>"
 }
